--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--seasonal-wheel.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--seasonal-wheel.html.twig
@@ -301,7 +301,7 @@
 								<img class="modal__image"></img>
 							</a>
 						</div>
-					<div class="col-xs-6">
+					<div class="col-xs-6 modal-image__container--textbox">
 					  <a class="modal-link__title">
 					    <h4>${randomMonthData.title}</h4>
 					  </a>
