--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/region/region--header.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/region/region--header.html.twig
@@ -40,14 +40,16 @@
         <div class="burger__label">{{ 'Menu'|t }}</div>
       </div>
       <div class="header-search js-header-search">
-        <form action="/search" method="get">
+        <form action="/search" method="get" aria-label="search">
           <div class="header-search__input-field">
             <input {{ create_attribute().addClass('input')
               .setAttribute('type', 'search').setAttribute('aria-label', 'Search'|t).setAttribute('required', 'required')
               .setAttribute('placeholder', 'Search the entire site'|t)
               .setAttribute('name', 'text')
-              .setAttribute('id', 'js-header-search-input') }}>
-            <button {{ create_attribute().setAttribute('type', 'submit').addClass('header-search__submit') }}>
+              .setAttribute('id', 'js-header-search-input') }}
+              aria-label="Search"
+              >
+            <button {{ create_attribute().setAttribute('type', 'submit').addClass('header-search__submit') }} alt="search">
               {% include '@reusable-component/svg-icon.twig' with {
                 'attributes': '',
                 'svgIconName': 'search'
