SIS2-328: Default icon for files grid on media library

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/article-page.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/article-page.css
@@ -1,6 +1,9 @@
 .article-page {
   &__image {
     text-align: center;
+    img {
+      max-height: 250px;
+    }
   }
   &__hero {
     width: 100%;
