SIS2-342: Removed shadows, fixed translation.

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--blog-post--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--blog-post--full.html.twig
@@ -133,7 +133,7 @@
       <div class="blog-post--view-all-writers--title">
         <h3>Alle skribenter</h3>
         <div class="hide-all-writers-link">
-          <h4>Lukke
+          <h4>Luk
             {% include '@reusable-component/svg-icon.twig' with {
               'attributes': '',
               'svgIconName': 'carret'
