--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-search-page.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-search-page.html.twig
@@ -93,3 +93,10 @@
   {{ element['form_token'] }}
   {{ element['form_id'] }}
 </form>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      {{ element.most_popular }}
+    </div>
+  </div>
+</div>
