--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--list.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--list.html.twig
@@ -76,7 +76,7 @@
     <a href="{{ url }}" class="inspiration-overview__item-link">
       <div class="inspiration-overview__image">
         {{ content.field_list_media }}
-        <a href="/{{ url|split('/')[1] }}">
+        <a href="/{{ url|split('/')[1] }}" aria-label="{{ node.field_article_type.entity.name.value }}">
           <div class="inspiration-overview__type">
             {{ node.field_article_type.entity.name.value }}
           </div>
