SIS2-346: Removed redundant profile field. Set sensible default values for profiles. Force profile overview to filter on user as owner. Don't display search button without text facet.

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-filter-form.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-filter-form.html.twig
@@ -32,8 +32,10 @@
           </span>
         </div>
         <div class="overview-form__search-input">
-          {{ element['facets'].text }}
-          {{ element['search'].search }}
+          {% if element['facets'].text %}
+            {{ element['facets'].text }}
+            {{ element['search'].search }}
+          {% endif %}
         </div>
       </div>
     </div>
