--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/news-page.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/news-page.css
@@ -1,4 +1,10 @@
 .news-page {
+  & .facts-box {
+    &__content-item {
+     display: block;
+    }
+  }
+
   &__content {
     h2 {
       font-size: var(--base-font-size-xxlarge) !important;
