--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/navigation/breadcrumb.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/navigation/breadcrumb.html.twig
@@ -8,22 +8,37 @@
  */
 #}
 {% if breadcrumb and disable == FALSE %}
-  {{ attach_library('sis/breadcrumb') }}
+	{{ attach_library('sis/breadcrumb') }}
 
-  <div class="container">
-    <div{{ attributes.addClass('breadcrumb') }}>
-      <ol{{ items_attributes.addClass('breadcrumb__items') }}>
-        {% for item in breadcrumb %}
-          <li class="breadcrumb__item">
-            {% if item.url %}
-              <a class="breadcrumb__link" href="{{ item.url }}">{{ item.text }}</a>
-            {% else %}
-              <span class="breadcrumb__link breadcrumb__link--active">{{ item.text }}</span>
-            {% endif %}
-          </li>
-        {% endfor %}
-      </ol>
-    </div>
-    {{ breadcrumb_json_data }}
-  </div>
+	<div class="container">
+		<div{{attributes.addClass('breadcrumb')}}>
+			<ol{{items_attributes.addClass('breadcrumb__items')}}>
+				{% for item in breadcrumb %}
+					{# if breadcrumbs has more than 2 items change first item to ... for mobile onkly #}
+					{% if loop.index == 1 and loop.length > 2 %}
+						<li class="breadcrumb__item">
+							<a href="{{ item.url }}" class="breadcrumb__link">
+								{% if is_mobile() %}
+									<span class="breadcrumb__text">...</span>
+								{% else %}
+									<span class="breadcrumb__text">{{item.text}}</span>
+								{% endif %}
+							</a>
+						</li>
+					{% else %}
+						<li class="breadcrumb__item">
+							{% if item.url %}
+								<a href="{{ item.url }}" class="breadcrumb__link">
+									<span class="breadcrumb__text">{{ item.text }}</span>
+								</a>
+							{% else %}
+								<span class="breadcrumb__text">{{ item.text }}</span>
+							{% endif %}
+						</li>
+					{% endif %}
+				{% endfor %}
+			</ol>
+		</div>
+		{{ breadcrumb_json_data }}
+	</div>
 {% endif %}
