--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/searchfield.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/searchfield.css
@@ -1,12 +1,11 @@
 .searchfield {
   &-search {
     display: flex;
-    max-width: 210px;
     margin: auto;
 
     &__input-field {
       position: relative;
-      width: 50%;
+      width: 100%;
       height: 42px;
       margin: 0 auto;
       padding: 11px 50px 11px 20px;
@@ -20,6 +19,10 @@
         padding: 0;
         font-size: var(--base-font-size-small);
         border: none;
+      }
+
+      @media (--viewport-ms-min) {
+        max-width: 210px;
       }
     }
 
