--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/footer.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/footer.css
@@ -166,7 +166,11 @@
 
     &-links {
       font-size: var(--base-font-size-small);
-      text-align: right;
+      text-align: center;
+
+      @media(--viewport-sm-min) {
+        text-align: right;
+      }
 
       ul {
         margin: 0;
