--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/news-page.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/news-page.css
@@ -1,7 +1,28 @@
 .news-page {
+  .swiper-pagination-wrapper {
+    display: flex;
+
+    .swiper-pagination-title {
+      font-size: 14px;
+      margin-right: 55px;
+
+      @media(--viewport-md-max) {
+        margin-right: 54px;
+      }
+    }
+  }
+
+  .swiper-pagination-fraction {
+    right: 105px;
+    bottom: auto;
+    left: auto;
+    width: auto;
+    font-size: 14px;
+  }
+
   & .facts-box {
     &__content-item {
-     display: block;
+      display: block;
     }
   }
 
