--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/blog-post.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/blog-post.css
@@ -1,5 +1,27 @@
 .blog-post {
+  .swiper-pagination-lock {
+    display: block !important;
+  }
+  .swiper-pagination-wrapper {
+    display: flex;
 
+    .swiper-pagination-title {
+      margin-right: 55px;
+      font-size: 14px;
+
+      @media (--viewport-md-max) {
+        margin-right: 54px;
+      }
+    }
+  }
+
+  .swiper-pagination-fraction {
+    right: 105px;
+    bottom: auto;
+    left: auto;
+    width: auto;
+    font-size: 14px;
+  }
   .all-writers {
     .facts-box {
       height: 240px;
@@ -12,7 +34,7 @@
     text-decoration: underline;
 
     &.hidden {
-     visibility: hidden;
+      visibility: hidden;
     }
 
     &:hover {
@@ -38,7 +60,7 @@
 
     &--title {
       display: flex;
-       justify-content: flex-end;
+      justify-content: flex-end;
 
       h3 {
         flex: 75%;
