SIS2-270: Fixed colors for text for certain themes, added link wrappers for enitity overviews for text and description, changed some colors, adjusted swiper page counter colors and text.

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/slider-pager-count.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/slider-pager-count.css
@@ -6,7 +6,7 @@
 .slider-pager-count {
   padding-right: var(--container-spacing);
   padding-left: var(--container-spacing);
-  color: var(--color-purple);
+  color: var(--theme-link-color);
   font-size: var(--base-font-size-small);
   text-align: center;
 
