--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
@@ -97,7 +97,7 @@
     &.clickable {
       &:hover {
         opacity: 0.5;
-       }
+      }
     }
     a {
       text-decoration: none;
@@ -119,6 +119,10 @@
     flex-direction: column;
     padding: 15px 20px 8px;
     color: var(--color-purple);
+
+    &__wrapper {
+      text-decoration: none;
+    }
   }
 
   &__class {
@@ -144,13 +148,16 @@
     font-size: var(--base-font-size-large);
     font-family: var(--heading-font-family);
     line-height: 1.3;
+    color: var(--color-purple);
+    text-decoration: none;
+
 
     &--authoring-information {
-       padding-left: 20px;
-       font-size: var(--base-font-size-small);
-       margin-top: 10px;
-       font-weight: normal;
-     }
+      padding-left: 20px;
+      font-size: var(--base-font-size-small);
+      margin-top: 10px;
+      font-weight: normal;
+    }
 
     &--blog-post {
       padding-left: 20px;
@@ -165,6 +172,7 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
     font-size: var(--base-font-size-small);
+    color: var(--color-purple);
   }
 
   &__subject {
@@ -251,7 +259,7 @@
       width: 16px;
       height: 12px;
       transform: translateY(-50%);
-      transition: right .3s ease;
+      transition: right 0.3s ease;
       fill: var(--color-purple);
     }
 
