--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--list.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--list.html.twig
@@ -92,12 +92,14 @@
             {{ content.field_class }}
           </div>
         {% endif %}
+        <a href="{{ url }}" class="inspiration-overview__content__wrapper">
         <div class="inspiration-overview__title">
           {{ label }}
         </div>
         <div class="inspiration-overview__description">
           {{ content.field_description }}
         </div>
+        </a>
       </div>
     </a>
     {% if subject_items|length > 0 %}
