--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--news--list.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--news--list.html.twig
@@ -69,26 +69,28 @@
 #}
 {{ attach_library('sis/inspiration-overview') }}
 <div class="inspiration-overview__item">
-  <div class="inspiration-overview__item-inner">
-    <div class="inspiration-overview__item-link">
-      <a href="{{ url }}">
-        <div class="inspiration-overview__image">
-          {{ content.field_list_media }}
-          <a href="/nyhedoversigt">
-            <div class="inspiration-overview__type inspiration-overview__type--news">
-              {{ 'Nyhed'|t }}
-            </div>
-          </a>
-        </div>
-      </a>
-      <div class="inspiration-overview__content">
-        <div class="inspiration-overview__title">
-          {{ label }}
-        </div>
-        <div class="inspiration-overview__description">
-          {{ content.field_description }}
-        </div>
-      </div>
-    </div>
-  </div>
+	<div class="inspiration-overview__item-inner">
+		<div class="inspiration-overview__item-link">
+			<a href="{{ url }}">
+				<div class="inspiration-overview__image">
+					{{ content.field_list_media }}
+					<a href="/nyhedoversigt">
+						<div class="inspiration-overview__type inspiration-overview__type--news">
+							{{ 'Nyhed'|t }}
+						</div>
+					</a>
+				</div>
+			</a>
+			<a href="{{ url }}" class="inspiration-overview__content__wrapper">
+				<div class="inspiration-overview__content">
+					<div class="inspiration-overview__title">
+						{{ label }}
+					</div>
+					<div class="inspiration-overview__description">
+						{{ content.field_description }}
+					</div>
+				</div>
+			</a>
+		</div>
+	</div>
 </div>
