SIS2-327: VIDEO MODAL OVERLAP

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/modal.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/modal.css
@@ -56,3 +56,13 @@
     overflow: visible;
   }
 }
+
+.js-media-library-item-preview {
+  img {
+    width: 15.5rem;
+    max-width: 15.5rem;
+    height: 10.5rem;
+    max-height: 10.5rem;
+    object-fit: cover;
+  }
+}
