--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--news--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--news--full.html.twig
@@ -158,7 +158,7 @@
           <div class="col-xs-12 col-sm-4 col-md-4">
             <div class="swiper-navigation">
               <div class="swiper-pagination-wrapper">
-                <div class="swiper-pagination-title"> Viser ud af:</div>
+                <div class="swiper-pagination-title"> Viser:</div>
                 <div class="swiper-pagination"></div>
               </div>
               <div class="swiper-button-prev"></div>
