--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/user/user--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/user/user--full.html.twig
@@ -50,7 +50,7 @@
 						<div class="swiper-navigation">
 							<div class="swiper-pagination-wrapper">
 								<div class="swiper-pagination-title">
-									Viser ud af:</div>
+									Viser:</div>
 								<div class="swiper-pagination"></div>
 							</div>
 							<div class="swiper-button-prev"></div>
@@ -79,7 +79,7 @@
 						<div class="swiper-navigation">
 							<div class="swiper-pagination-wrapper">
 								<div class="swiper-pagination-title">
-									Viser ud af:</div>
+									Viser:</div>
 								<div class="swiper-pagination"></div>
 							</div>
 							<div class="swiper-button-prev"></div>
