--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--blog-post--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--blog-post--full.html.twig
@@ -167,7 +167,7 @@
 						<div class="swiper-navigation">
 							<div class="swiper-pagination-wrapper">
 								<div class="swiper-pagination-title">
-									Viser ud af:</div>
+									Viser:</div>
 								<div class="swiper-pagination"></div>
 							</div>
 							<div class="swiper-button-prev"></div>
