SIS2-386: Translations, font size adjustment, color change.

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/entity-slideshow.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/entity-slideshow.css
@@ -231,6 +231,7 @@
       font-weight: 600;
       font-size: var(--base-font-size-extra-small);
       font-family: var(--base-font-family);
+      color: #fff;
     }
   }
 
