--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/typography.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/typography.css
@@ -45,7 +45,7 @@ h2 {
 }
 
 h3 {
-  font-size: var(--base-font-size-large);
+  font-size: var(--base-font-size-xxlarge);
   line-height: 1.2;
 
   @media (--viewport-ms-min) {
