--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/entity-slideshow.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/entity-slideshow.css
@@ -106,6 +106,10 @@
       color: var(--color-purple-dark);
       background-color: var(--color-pink);
     }
+
+    &--page {
+       background-color: var(--color-red);
+     }
   }
 
   &__content {
