--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/latest-news.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/latest-news.css
@@ -62,7 +62,7 @@
       width: 12px;
       height: 12px;
       transform: translate(-50%, -50%) rotate(45deg);
-      content: "";
+      content: '';
     }
 
     .swiper-button-prev::after {
@@ -77,7 +77,6 @@
       border-right: 2px solid #fff;
     }
   }
-
 
   .inspiration-overview__item {
     flex: 0 0 100%;
@@ -108,5 +107,11 @@
 
   .inspiration-overview__title {
     color: var(--color-purple);
+  }
+}
+
+@media print {
+  .news-page__latest {
+    display: none;
   }
 }
