SIS2: 366: Pagination go up, bug trying to fix.

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/modal.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/modal.css
@@ -57,7 +57,11 @@
   }
 }
 
-.js-media-library-item-preview {
+.js-media-library-views-form {
+  .js-media-library-item {
+    display: inline-table !important;
+  }
+
   img {
     width: 15.5rem;
     max-width: 15.5rem;
