--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/preview/theme.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/preview/theme.css
@@ -19,6 +19,7 @@
       color: var(--theme-color);
       background-color: transparent;
       border-color: var(--theme-button-background-color);
+      overflow: visible !important;
     }
   }
 
