--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/theme/theme.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/theme/theme.css
@@ -21,6 +21,7 @@
       color: var(--theme-color);
       background-color: transparent;
       border-color: var(--theme-color);
+      overflow: visible !important;
     }
   }
 
