--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--teaser.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--teaser.html.twig
@@ -92,12 +92,14 @@
             {{ content.field_class }}
           </div>
         {% endif %}
-        <div class="inspiration-overview__title">
-          {{ label }}
-        </div>
-        <div class="inspiration-overview__description">
-          {{ content.field_description }}
-        </div>
+          <a href="{{ url }}" class="inspiration-overview__item-link">
+            <div class="inspiration-overview__title">
+              {{ label }}
+            </div>
+            <div class="inspiration-overview__description">
+              {{ content.field_description }}
+            </div>
+          </a>
       </div>
     </a>
     {% if subject_items|length > 0 %}
