SIS2-347: Added filters for search page again

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-search-page.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-search-page.html.twig
@@ -68,8 +68,11 @@
                   {{ "Collapse All"|t }} -
                 </button>
               </div>
-   
-
+              {{ element['facets'].field_article_type }}
+              {{ element['facets'].field_class }}
+              {{ element['facets'].field_location }}
+              {{ element['facets'].field_season }}
+              {{ element['facets'].field_subject }}
             </div>
           </div>
         </div>
