--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/base.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/base.css
@@ -90,3 +90,21 @@ table {
   border-collapse: collapse !important;
   width: 100% !important;
 }
+
+#drupal-modal .section {
+  width: 100%;
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
+}
+
+#media-library-view .views-exposed-form {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.js-media-library-views-form {
+  img {
+    width: 100%;
+    height: auto;
+  }
+}
