SIS2-322: Lexicon design thingies and translation for search fix.

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/overview-content--lexicon.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/overview-content--lexicon.html.twig
@@ -18,9 +18,11 @@
  * @see template_preprocess_overview_content()
  */
 #}
+{{ attach_library('sis/overview-lexicon') }}
+
 <div{{ attributes }}>
-  {{ content.letter }}
   {% if content.content %}
+    {{ content.letter }}
     <div class="overview-form-contents__content">
       {{ content.content }}
     </div>
