--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/lexicon.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/lexicon.css
@@ -1,23 +1,96 @@
 .lexicon {
-  &-teaser {
-    .section--fullwidth & {
-        padding-right: var(--container-spacing-mobile);
-        padding-left: var(--container-spacing-mobile);
+  .overview-form {
+ .overview-form__header {
+    justify-content: space-between;
+  }
 
-        @media (--viewport-md-min) {
-          padding-right: var(--container-spacing);
-          padding-left: var(--container-spacing);
-        }
+  #edit-letter {
+    display: flex;
+    flex-wrap: wrap;
+
+    label {
+      padding-left: 18px;
+      color: var(--link-color);
+      font-size: var(--base-font-size-xlarge);
+      text-decoration: underline;
+      font-family: var(--heading-font-family);
+
+      @media (--viewport-md-min) {
+        font-size: var(--base-font-size-xxlarge);
+      }
+    }
+
+    .radio:not(:checked) + label:before {
+      display: none;
+    }
+
+    .radio:checked + label:before,
+    .radio:checked + label:after {
+      display: none;
+    }
+  }
+
+  .overview-form-contents {
+    display: block;
+
+    &__content {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+
+      @media (--viewport-md-min) {
+        grid-template-columns: repeat(3, 1fr);
+      }
+
+      @media (--viewport-lg-min) {
+        grid-template-columns: repeat(4, 1fr);
+      }
+    }
+
+    /* Currently selected letter */
+    .lexicon_content__letter {
+      font-weight: bold;
+      font-size: var(--base-font-size-xlarge);
+      padding-left: 14px;
+
+      @media (--viewport-md-min) {
+        font-size: var(--base-font-size-xxxlarge);
+      }
+    }
+  }
+
+  /*   
+  ::before,
+  ::after {
+    display: none;
+  }
+}
+
+input[type="radio"]:checked + label {
+  color: white !important;
+  background-color: var(--color-orange);
+  border-radius: 100px;
+}
+ */
+
+  /* &-teaser {
+    .section--fullwidth & {
+      padding-right: var(--container-spacing-mobile);
+      padding-left: var(--container-spacing-mobile);
+
+      @media (--viewport-md-min) {
+        padding-right: var(--container-spacing);
+        padding-left: var(--container-spacing);
+      }
     }
 
     &__title {
-       margin-bottom: 12px;
-     }
+      margin-bottom: 12px;
+    }
 
     &__description {
-       padding-bottom: 24px;
-       font-size: var(--base-font-size-large);
-     }
+      padding-bottom: 24px;
+      font-size: var(--base-font-size-large);
+    }
 
     &__articles {
       .lexicon__letter {
@@ -32,134 +105,134 @@
         }
       }
     }
-  }
+  } */
 
-  &__filter-wrapper {
-     display: grid;
-     align-items: flex-end;
-     width: 100%;
-     margin-bottom: 58px;
+  /* &__filter-wrapper {
+    display: grid;
+    align-items: flex-end;
+    width: 100%;
+    margin-bottom: 58px;
 
-  @media (--viewport-md-min) {
-    grid-template-columns: auto 400px;
-  }
+    @media (--viewport-md-min) {
+      grid-template-columns: auto 400px;
+    }
 
-  .lexicon__search {
-    position: relative;
-    height: 49px;
-    margin-bottom: 22px;
+    .lexicon__search {
+      position: relative;
+      height: 49px;
+      margin-bottom: 22px;
 
-  input[type="search"] {
-    height: 100%;
-    border-color: var(--theme-input-border-dark);
-    border-radius: 25px;
-  }
+      input[type='search'] {
+        height: 100%;
+        border-color: var(--theme-input-border-dark);
+        border-radius: 25px;
+      }
 
-  .button {
-    position: absolute;
-    top: 5px;
-    right: 4px;
-    width: 50px;
-    height: 40px;
-    min-height: 39px;
-    padding: 0;
-    background-color: transparent;
+      .button {
+        position: absolute;
+        top: 5px;
+        right: 4px;
+        width: 50px;
+        height: 40px;
+        min-height: 39px;
+        padding: 0;
+        background-color: transparent;
 
-  svg {
-    width: 18px;
-    height: 18px;
-  }
-  }
-  }
-  }
+        svg {
+          width: 18px;
+          height: 18px;
+        }
+      }
+    }
+  } */
 
-  &__filters {
-     margin-bottom: 36px;
+  /* &__filters {
+    margin-bottom: 36px;
 
-  @media (--viewport-md-min) {
-    margin-bottom: 0;
-  }
+    @media (--viewport-md-min) {
+      margin-bottom: 0;
+    }
 
-  ul {
-    margin: 0;
-    padding: 0;
-    word-break: break-word;
-    list-style-type: none;
+    ul {
+      margin: 0;
+      padding: 0;
+      word-break: break-word;
+      list-style-type: none;
 
-  li {
-    position: relative;
-    float: left;
-    margin-right: 18px;
-    margin-bottom: 12px;
+      li {
+        position: relative;
+        float: left;
+        margin-right: 18px;
+        margin-bottom: 12px;
 
-  a {
-    font-weight: var(--base-font-weight);
-    font-size: var(--base-font-size-xlarge);
-    font-family: var(--heading-font-family);
+        a {
+          font-weight: var(--base-font-weight);
+          font-size: var(--base-font-size-xlarge);
+          font-family: var(--heading-font-family);
 
-  @media (--viewport-md-min) {
-    font-size: var(--base-font-size-xxlarge);
-  }
-  }
+          @media (--viewport-md-min) {
+            font-size: var(--base-font-size-xxlarge);
+          }
+        }
 
-  @media (--viewport-md-min) {
-  &:nth-child(15) {
-    clear: left;
-  }
-  }
-  }
-  }
-  }
+        @media (--viewport-md-min) {
+          &:nth-child(15) {
+            clear: left;
+          }
+        }
+      }
+    }
+  } */
 
-  &__items {
-     display: grid;
-     grid-template-columns: repeat(1, 1fr);
-     column-gap: var(--gutter-width-mobile);
+  /* &__items {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    column-gap: var(--gutter-width-mobile);
 
-  @media (--viewport-md-min) {
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: var(--gutter-width);
-  }
+    @media (--viewport-md-min) {
+      grid-template-columns: repeat(3, 1fr);
+      column-gap: var(--gutter-width);
+    }
 
-  @media (--viewport-lg-min) {
-    grid-template-columns: repeat(4, 1fr);
-  }
+    @media (--viewport-lg-min) {
+      grid-template-columns: repeat(4, 1fr);
+    }
 
-  .inspiration-overview__item {
-    height: auto;
-    padding-right: 0;
-    padding-left: 0;
+    .inspiration-overview__item {
+      height: auto;
+      padding-right: 0;
+      padding-left: 0;
 
-  .inspiration-overview__content {
-    padding-bottom: 36px;
-  }
+      .inspiration-overview__content {
+        padding-bottom: 36px;
+      }
 
-  &-inner {
-     height: 100%;
-   }
-  }
-  }
+      &-inner {
+        height: 100%;
+      }
+    }
+  } */
 
-  &__more_link {
-     margin-top: 39px;
+  /* &__more_link {
+    margin-top: 39px;
 
-  a.button {
-    padding: 18px 61px 18px 23px;
+    a.button {
+      padding: 18px 61px 18px 23px;
 
-  svg {
-    position: absolute;
-    right: 23px;
-    width: 14px;
-    height: 8px;
-  }
-  }
-  }
+      svg {
+        position: absolute;
+        right: 23px;
+        width: 14px;
+        height: 8px;
+      }
+    }
+  } */
 
-  .overview-form {
+  /* .overview-form {
     &-contents {
-       display: grid;
-       grid-template-columns: repeat(1, 1fr);
-       column-gap: var(--gutter-width-mobile);
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      column-gap: var(--gutter-width-mobile);
 
       @media (--viewport-md-min) {
         grid-template-columns: repeat(3, 1fr);
@@ -170,6 +243,6 @@
         grid-template-columns: repeat(4, 1fr);
       }
     }
-  }
+  } */
 }
-
+}
