--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--lexicon-overview.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--lexicon-overview.html.twig
@@ -1,6 +1,6 @@
 {{ attach_library('sis/lexicon') }}
 <div{{ attributes.addClass('lexicon') }}>
-  <div class="container">
+  <div>
     <div class="row">
       {{ filters }}
       {% block content %}
