--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/header.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/header.css
@@ -3,7 +3,6 @@
  * Header.
  */
 
-
 .header {
   position: fixed;
   top: 0;
@@ -108,5 +107,38 @@
   form {
     position: relative;
     width: 100%;
+  }
+}
+
+/* Leksicon overview block search field */
+.lexicon-search-wrapper {
+  padding: 0 18px 0 18px;
+
+  @media (--viewport-ms-max) {
+    padding: 0 20px;
+  }
+
+  .header-search {
+    &__submit {
+      position: absolute;
+      top: 8px;
+      right: 30px;
+      width: 34px;
+      height: 34px;
+      padding: 10px;
+      border-radius: 50%;
+      cursor: pointer;
+      background: transparent;
+
+      @media (--viewport-ms-max) {
+        right: 33px;
+      }
+
+      & svg.icon {
+        width: 18px;
+        height: 18px;
+        fill: #3d2859;
+      }
+    }
   }
 }
