--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/search-autocomplete.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/search-autocomplete.css
@@ -2,7 +2,6 @@
   padding: 0 !important;
 }
 
-
 .autoComplete_wrapper {
   position: relative;
   display: inline-block;
@@ -23,6 +22,12 @@
     outline: 0;
     transition: opacity .15s ease-in-out;
     padding: 25px 15px;
+
+    @media(--viewport-sm-max) {
+      right: 0;
+      left: 0;
+    }
+
 
     &:empty,
     > ul[hidden] {
