--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/region/region--header.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/region/region--header.html.twig
@@ -41,16 +41,14 @@
       </div>
       <div class="header-search js-header-search">
         <form action="/search" method="get" aria-label="search">
-          <div class="header-search__input-field" id="Search">
+          <div class="header-search__input-field" id="search">
             <input {{ create_attribute().addClass('input')
               .setAttribute('type', 'search').setAttribute('aria-label', 'Search'|t).setAttribute('required', 'required')
               .setAttribute('placeholder', 'Search the entire site'|t)
               .setAttribute('name', 'text')
               .setAttribute('aria-label', 'Search')
               .setAttribute('id', 'js-header-search-input') }}
-              aria-labelledby="searchbutton"
               >
-
             <button {{ create_attribute().setAttribute('type', 'submit').addClass('header-search__submit') }} aria-label="search">
               {% include '@reusable-component/svg-icon.twig' with {
                 'attributes': '',
