SIS2-380: Show no styling on description of Visikort in list view mode

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/profile--organization--list.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/profile--organization--list.html.twig
@@ -84,7 +84,9 @@
           {{ profile.field_organization_address.organization }}
         </div>
         <div class="organization-overview__description">
-          {{ content.field_organization_description }}
+          {% if content.field_organization_description.0['#text'] %}
+            {{ content.field_organization_description.0['#text']|striptags }}
+          {% endif %}
         </div>
       </div>
     </a>
