SIS2-376: Make user compact clickable, let anonymous users view user pages

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/user/user--compact.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/user/user--compact.html.twig
@@ -1,6 +1,7 @@
+{% set link =  url('entity.user.canonical', { 'user': user.id() }) %}
 <div class="facts-box">
   <div class="facts-box__content">
-    <div class="facts-box__content-item">
+    <div class="facts-box__content-item user">
       <div class="facts-box__content-item-label facts-box__content-item-label-author-image">
         {% if content.user_picture %}
           {{ content.user_picture }}
@@ -8,10 +9,12 @@
       </div>
       <div class="facts-box__content-item-value facts-box__content-item-value-author-full-name">
         {% if content.field_full_name %}
-          <h5>{{ content.field_full_name }}</h5>
+          <a href="{{ link }}"><h5>{{ content.field_full_name }}</h5></a>
         {% endif %}
         {% if user.field_summary.value %}
+          <a href="{{ link }}">
           {{ user.field_summary.value[:225] ~ (user.field_summary.value|length > 225 ? '...') }}
+          </a>
         {% endif %}
       </div>
     </div>
