--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/news-page.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/news-page.css
@@ -23,6 +23,13 @@
   & .facts-box {
     &__content-item {
       display: block;
+      &.user {
+        display: flex;
+        a {
+          text-decoration: none;
+          color: var(--color-purple);
+        }
+      }
     }
   }
 
