--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/search-autocomplete.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/search-autocomplete.css
@@ -6,6 +6,7 @@
   position: relative;
   display: inline-block;
   padding: 11px 50px 11px 20px;
+  width: 100%;
 
   > ul {
     position: absolute;
