A bunch of changes for SIS2-170.

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/base.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/base.css
@@ -108,3 +108,7 @@ table {
     height: auto;
   }
 }
+
+#media-library-view .views-row .views-field-media-library-select-form {
+  z-index: 999;
+}
