--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/overview-form.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/overview-form.css
@@ -1,4 +1,11 @@
 .overview-form {
+  &__search-input {
+    button {
+      svg {
+        display: none;
+      }
+    }
+  }
   &-contents {
     display: grid;
     grid-template-columns: 1fr;
