--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/hero.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/hero.css
@@ -57,9 +57,7 @@
   &__content {
     position: relative;
     z-index: 2;
-    display: flex;
     flex-direction: column;
-    align-items: center !important;
     justify-content: center;
     width: 100%;
     height: 100vh;
@@ -195,4 +193,9 @@
       fill: #fff;
     }
   }
+}
+
+.hero {
+display: flex;
+align-items: center;
 }
